--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">YourProjectName</string>
+    <string name="CodePushServerUrl">http://localhost:3000</string>
 </resources>
